# tterm

./: .gitignore  Cargo.toml  PRD.md  README.md
.cursor/rules/: tterm.mdc
egui_term/src/: font.rs
egui_term/src/backend/: mod.rs  settings.rs
src/: app.rs  broadcast_manager.rs  grid_manager.rs  input_handler.rs  lib.rs  main.rs  split_manager.rs  tab_manager.rs  types.rs  ui_renderer.rs
src/ime/: cjk.rs  mod.rs
src/ipc/: client.rs  messages.rs  mod.rs  server.rs
src/session/: manager.rs  mod.rs  pty_session.rs  simple_pty_session.rs
