[package]
name = "full_screen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tterm"
path = "src/main.rs"

[[bin]]
name = "tterm-daemon"
path = "src/bin/tterm-daemon.rs"

[[bin]]
name = "test-client"
path = "src/bin/test-client.rs"

[[bin]]
name = "interactive-test-client"
path = "src/bin/interactive-test-client.rs"

[dependencies]
egui = "0.32.0"
eframe = { version = "0.32.0", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the wgpu rendering backend. Alternative: "glow".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
egui_term = { path = "./egui_term" }
unicode-width = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
portable-pty = "0.8"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[features]
default = []
x11 = ["eframe/x11"]
wayland = ["eframe/wayland"]


